syntax = "proto3";

package task;

message Task {
	int64 Id = 1;
	string Name = 2;
	bool Done = 3;
}

message Tasks {
	repeated Task tasks = 1;
}

message GetTaskRequest {
	string Id = 1;
}

message PostTaskRequest {
	string Name = 1;
}

message PutTaskRequest {
	int64 Id = 1;
	bool Done = 2;
}

message DeleteTaskRequest {
	int64 Id = 1;
}

service TaskService {
  rpc GetTasks(GetTaskRequest) returns (Tasks) {}
  rpc PostTask(PostTaskRequest) returns (Tasks) {}
  rpc PutTask(PutTaskRequest) returns (Tasks) {}
  rpc DeleteTask(DeleteTaskRequest) returns (Tasks) {}
}
